--- a/EXP.9
+++ b/EXP.9
@@ -1,27 +1,34 @@
-# FREQUENCY-RESPONSE-OF-SINGLE-STAGE-MOSFET-CS-AMPLIFIER-EXP-9
+# DESIGN-OF-DIGITAL-CLOCK-USING-BASIC-LOGIC-GATES-AND-AN-OSCILLATOR-CIRCUIT
 
 # AIM
-![WhatsApp Image 2025-11-21 at 21 09 41_4fee718f](https://github.com/user-attachments/assets/d12f41e0-d707-4653-a19d-49ec66c554e0)
+
+To design and implement a digital clock circuit using an oscillator as the time-base generator and basic logic gates/counters for generating seconds, minutes, and hours, and to display the time using digital displays
 
 # COMPONENT REQUIRED
-![WhatsApp Image 2025-11-21 at 21 09 41_15110b25](https://github.com/user-attachments/assets/47960271-35d4-43f4-86a8-bf9bb3a15336)
+
+![COMPONENT](https://github.com/user-attachments/assets/56833273-c854-4ad4-a3ab-18f6deec50d5)
+
+# THEORY 
+
+![COMPONENT](https://github.com/user-attachments/assets/89705e02-8f46-4761-9a24-627521f72bc2)
+![THEORY 2](https://github.com/user-attachments/assets/e385a3b5-42a1-425c-94dd-2b14e974fab5)
+
 
 # PROCEDURE 
+![PRIOCEDURE](https://github.com/user-attachments/assets/8bc44153-6160-42c7-80ff-0e38383f34e0)
 
-![WhatsApp Image 2025-11-21 at 21 09 42_6864fe0f](https://github.com/user-attachments/assets/fbdc2db5-6fd2-4a50-88de-217ff9c8b366)
+# BLOCK DIAGRAM
 
-# BLOCK DIAGRAM  AND CALCULATION 
-![WhatsApp Image 2025-11-21 at 21 00 13_ef60f0e9](https://github.com/user-attachments/assets/e856a7cf-c730-4292-acda-4bab73e73390)
-
-# GRAPH
+![WhatsApp Image 2025-11-21 at 20 38 04_55a52288](https://github.com/user-attachments/assets/e683e72f-c552-455b-908d-96ce6a130c6a)
 
 
-![WhatsApp Image 2025-11-13 at 18 33 51_b7be1eca](https://github.com/user-attachments/assets/1b283c06-9840-4b48-be01-e5e519e60d4c)
+# OBSERVATION 
+
+![WhatsApp Image 2025-11-21 at 20 38 05_a3c6ee75](https://github.com/user-attachments/assets/9c8dbb7e-a829-4a11-ace4-29e5c2561004)
 
 
-# CALCULATION AND RESULT 
-![WhatsApp Image 2025-11-21 at 21 07 35_e4a33728](https://github.com/user-attachments/assets/fac0650d-2c11-4ed0-ae8c-47166731e472)
+# RESULT
 
-
+![RESULT](https://github.com/user-attachments/assets/e0766eed-8ec8-49d0-bccb-955f6f2249ed)
 
 
